--- a/BlazorTool.Client/Components/WorkOrderComponent.razor.css
+++ b/BlazorTool.Client/Components/WorkOrderComponent.razor.css
@@ -7,8 +7,6 @@
     background: #ffffff;
     border-radius: 12px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    max-height: 70vh;
 }
 
 .work-order-container.activities-visible {
@@ -110,7 +108,7 @@
 .custom-highlight {
     background-color: floralwhite;
     padding: 1rem;
-
+    text-align: left;
 }
 
 .field-value {
