--- a/BlazorTool.Client/Components/ActivityList.razor
+++ b/BlazorTool.Client/Components/ActivityList.razor
@@ -44,10 +44,21 @@
 
     protected override async Task OnParametersSetAsync()
     {
+        await RefreshActivitiesAsync();
+    }
+
+    public async Task RefreshActivitiesAsync()
+    {
         if (WorkOrderId > 0)
         {
+            activities = null;
+            StateHasChanged();
             activities = await ApiClient.GetActivitiesByWO(WorkOrderId);
-            activities.Sort((x, y) => x.AddDate.CompareTo(y.AddDate));
+            if (activities != null)
+            {
+                activities.Sort((x, y) => x.AddDate.CompareTo(y.AddDate));
+            }
+            StateHasChanged();
         }
     }
 }
